- Added padding 0 for <p> in editor needed for the above change
- Fixed issue about redo only wrong answered questions in tests
- Fixed issue about converting external links with encrypt url option
- Fixed issue with group key lessons assignment when assign_profile_to_new is set
- Added question response details option in test reports

=== Version 3.6.6 8242 ===
- Added users reports generator (enterprise/educational editions)
- Added handle to reset all executions for all users in a test
- Added code for not allowing any sub-administrator to edit an administrator profile
- Improved performance during csv import for users
- Moved logout redirect option to appearance tab
- Fixed issue in user type in editing an admin by a subadmin
- Fixed issue about printing test units
- Fixed adding additional options in match questions error
- Fixed toggle material in progress disappearing when only lessons are assigned to users, and are all complete
- Fixed error when organizational chart is available to users and visited by non-supervisor
- Fixed issue about onmouseover underline in content tree and IE7
- Fixed issue in advlink plugin in editor with colored themes
- Fixed issue introduced in 3.6.5 about course completion operations
- Fixed changing course category not working when lessons with the same id existed in the category
- Fixed user's progress in course/lesson initialization would result in other users' progress being initialized as well
- Fixed not displaying empty categories in catalog, even if children are not empty
- Fixed $loadScripts not being initialized causes modules' javascripts not being included
- Added automatic creation of message folders to users, in case they are missing
- Fixed exporting lessons with illegal windows filesystem characters in their name
- Fixed avatars list not displayed when administrator edits himself
- Fixed "view" user_type restriction for messages displayed non-working add/reply/fwd handles