@@ -3868,6 +3868,7 @@ define("_OVERWRITEIFFOLDEREXISTS", "Overwrite existing folder");
 define("_LANDINGPAGE","Landing page");
 define("_EXPORTTOXLS", "Export to xls");
 define("_SURVEYFAILEDTOBEPUBLISHED", "Survey failed to be published");
+define("_PRINTCHART","Print chart");
 define("_RESPONSEDETAILS", "Response details");
 define("_SHOWINGONLYACTIVEENTITIES", "Showing only active entities");
 define("_SHOWINGONLYINACTIVEENTITIES", "Showing only inactive entities");
